# SmartPhotoKeeper-P2

./: README.md
backend/: .env.example  .gitignore  main.py  pyproject.toml
backend/app/: config.py  main.py  router.py  schema.py  storage.py
frontend/: .gitignore  package-lock.json  package.json
frontend/src/: AlbumDetail.css  AlbumDetail.jsx  AlbumEditModal.jsx  AlbumList.css  AlbumList.jsx  App.js  EditIcon.css  EditIcon.jsx  Login.jsx  ModalNewAlbum.jsx  PhotoAlbum.css  PhotoAlbum.jsx  Profile.jsx  SidebarMenu.css  SidebarMenu.jsx  Signup.jsx  Spinner.css  UploadStatus.css  UploadStatus.jsx  api.js  uploadService.js
