[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Przemysław Węgrzynowicz <przemyslaw_wegrzynowicz@genpt.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.2"
firebase-admin = "^6.5.0"
uvicorn = "^0.32.0"
python-dotenv = "^1.0.1"
pydantic = "^2.9.2"
pydantic-settings = "^2.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
